--- a/app/todo-app/package.json
+++ b/app/todo-app/package.json
@@ -21,7 +21,8 @@
     "body-parser": "1.14.2",
     "express": "4.13.4",
     "mongoose": "4.4.5",
-    "nodemon": "^1.11.0"
+    "nodemon": "^1.11.0",
+    "webpack": "^1.12.14"
   },
   "devDependencies": {
     "webpack": "1.12.14"
